style.css
body {
    display: flex;
    flex-direction: column;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    min-height: 100vh;
    font-family: : Georgia, 'Times New Roman', Times, serif;
}

footer, header {
    display: flex;
}

.content {
    min-height: 100vh;
    display: flex;
    padding: 4% 20% 0;
    flex-direction: column;
}

footer {
    flex: 0.5 1 0;
    width: 100%;
    height: 7%;
    justify-content: center;
    align-items: center;
}

header {
    flex: 1 1 0;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 5%;
}

header > * {
    flex: 1 1 25%;
}

main {
    flex: 4;
}

#book-cards { 
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 5%;
}

#book-cards > * {
    display: flex;
    gap: 3%;
    height: 250px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 2%;
}

.book-card > * {
    margin: 0;
}

.book-card > h2 {
    flex: 1 1 0;
}

.book-card > button {
    flex: 1 1 0;
    width: 80%;
}

#dialog-book {
    padding: 0;
}

#dialog-div {
    padding: 16px;
}

